--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-maskedinput",
+  "name": "lh-react-maskedinput",
   "description": "Masked <input/> React component",
   "version": "3.0.0",
   "main": "./lib/index.js",
   "standalone": "MaskedInput",
-  "homepage": "https://github.com/insin/react-maskedinput",
+  "homepage": "https://github.com/LendingHome/react-maskedinput",
   "license": "MIT",
   "author": "Jonny Buchanan <jonathan.buchanan@gmail.com>",
   "keywords": [
